add: authentication 구현 완료

--- a/index.html
+++ b/index.html
@@ -3,7 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Svelte + Vite App</title>
+    <title>YTM-electron</title>
+    <link rel="stylesheet" href="/css/pretendard.css">
+    <style>
+      body {
+        -webkit-font-smoothing: antialiased;
+        text-rendering: optimizeLegibility;
+        -webkit-transform: translate3d(0,0,0);
+        -moz-transform: translate3d(0,0,0);
+        transform: translate3d(0,0,0);
+        font-family: "Pretendard Variable";
+        letter-spacing: -0.5px;
+        margin: 0;
+        padding: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: #222;
+        color: #fff;
+      }
+
+      input {
+        color: #fff;
+        font-family: "Pretendard Variable";
+      }
+
+      a {
+        color: #fff;
+      }
+
+      *, *::after, *::before {
+        user-select: none;
+        -webkit-user-drag: none;
+        -webkit-app-region: no-drag;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
