add: 노래를 멈추지 않아도 동작하는 라우터를 구현했지만.. 해쉬라우터로 엎을 예정

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/pretendard.css">
     <style>
       body {
+        overflow: hidden;
         -webkit-font-smoothing: antialiased;
         text-rendering: optimizeLegibility;
         -webkit-transform: translate3d(0,0,0);
@@ -28,6 +29,7 @@
       }
 
       a {
+        text-decoration: none;
         color: #fff;
       }
 
