--- a/index.html
+++ b/index.html
@@ -23,6 +23,25 @@
         color: #fff;
       }
 
+      textarea:focus, input:focus{
+        outline: none;
+      }
+
+      ::-webkit-scrollbar {
+        width: 6px;
+      }
+      ::-webkit-scrollbar-track {
+        background-color: transparent;
+      }
+      ::-webkit-scrollbar-thumb {
+        border-radius: 3px;
+        background-color: gray;
+      }
+      ::-webkit-scrollbar-button {
+        width: 0;
+        height: 0;
+      }
+
       input {
         color: #fff;
         font-family: "Pretendard Variable";
