--- a/index.html
+++ b/index.html
@@ -23,6 +23,35 @@
         color: #fff;
       }
 
+      input[type="range"] {
+        overflow: hidden;
+        height: 0.5vh;
+        width: 5vw;
+        border-radius: 1vh;
+        -webkit-appearance: none;
+        background: transparent;
+      }
+
+      input[type="range"]:focus {
+        outline: none;
+      }
+
+      input[type="range"]::-webkit-slider-runnable-track {
+        width: 100%;
+        height: 100%;
+        cursor: pointer;
+        border-radius: 5px;
+        background-color: #000;
+      }
+
+      input[type="range"]::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        width: 0px;
+        height: 0px;
+        cursor: pointer;
+        box-shadow: -100vw 0 0 100vw #fff;
+      }
+
       textarea:focus, input:focus{
         outline: none;
       }
@@ -30,13 +59,16 @@
       ::-webkit-scrollbar {
         width: 6px;
       }
+      
       ::-webkit-scrollbar-track {
         background-color: transparent;
       }
+      
       ::-webkit-scrollbar-thumb {
         border-radius: 3px;
         background-color: gray;
       }
+
       ::-webkit-scrollbar-button {
         width: 0;
         height: 0;
