--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YTM-electron</title>
-    <link rel="stylesheet" href="/css/pretendard.css">
+    <link rel="stylesheet" href="/css/fonts.css">
     <style>
       body {
         overflow: hidden;
@@ -13,7 +13,7 @@
         -webkit-transform: translate3d(0,0,0);
         -moz-transform: translate3d(0,0,0);
         transform: translate3d(0,0,0);
-        font-family: "Pretendard Variable";
+        font-family: "Pretendard Variable", "MPLUS1 Variable";
         letter-spacing: -0.5px;
         margin: 0;
         padding: 0;
